--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
 
         <footer><div>
-            Copyright 2020 @ makeschool.com
+            Copyright <script>document.write(new Date().getFullYear());</script> @ makeschool.com
         </div></footer>
 
         <script src="/static/index.js"></script>
