--- a/templates/detail.html
+++ b/templates/detail.html
@@ -12,33 +12,33 @@
 #}
 
 <main>
-        <h1>Tomato</h1>
+        <h1>{{ plant['name'] }}</h1>
 
-        <img src="https://www.almanac.com/sites/default/files/styles/primary_image_in_article/public/image_nodes/tomatoes_helios4eos_gettyimages-edit.jpeg?itok=4KrW14a4">
+        <img src="{{ plant['photo_url'] }}" alt ="Photo of {{ plant['name'] }}">
 
         
 
         <section id="info">
             <h3>Info</h3>
 
-            <strong>Date Planted</strong>
-            3/20/2020
+            <strong>Date Planted:</strong>
+            {{ plant['date_planted'] }}
             <br><br>
 
-            <strong>Variety</strong>
-            Early Girl
+            <strong>Variety:</strong>
+            {{ plant['variety'] }}
             <br><br>
 
-            <a class="nav" href="/edit/123456">Edit Plant</a><br><br>
+            <a class="nav" href="{{ url_for('edit', plant_id=plant['_id']) }}">Edit Plant</a><br><br>
         </section>
 
-        <form action="/harvest/123456" method="POST">
+        <form action="{{ url_for('harvest', plant_id=plant['_id']) }}" method="POST">
             <fieldset>
                 <legend>Harvested:</legend>
                 
                 <label>
                     Amount harvested
-                    <input type="text" name="harvested_amount" placeholder="e.g. 2 tomatoes">
+                    <input type="text" name="quantity" placeholder="e.g. 2 tomatoes">
                 </label>
 
                 <label>
