--- a/templates/detail.html
+++ b/templates/detail.html
@@ -41,18 +41,14 @@
                 <input type="submit" class="submit" value="Harvest!">
             </fieldset>
         </form>
-
-        {#
-            TODO: Create a for loop here to loop over all harvests (passed in 
-            from the route's context) and display their information.
-        #}
         <section id="harvest-history">
-            <h3>Harvest History</h3>
+        <h3>Harvest History</h3>
 
-            <ul>
-                <li>5/15/2020: Harvested 3 tomatoes</li>
-                <li>5/18/2020: Harvested 2 tomatoes</li>
-            </ul>
+        <ul>
+            {% for harvest in plant['harvests'] %}
+                <li>{{ harvest['date'] }}: Harvested {{ harvest['quantity'] }}</li>
+            {% endfor %}
+        </ul>
         </section>
 
         <form action="/delete/123456" method='POST' id="delete-form" onsubmit="return confirm_delete()">
