--- a/templates/detail.html
+++ b/templates/detail.html
@@ -51,7 +51,7 @@
         </ul>
         </section>
 
-        <form action="/delete/123456" method='POST' id="delete-form" onsubmit="return confirm_delete()">
+        <form action="{{ url_for('delete', plant_id=plant['_id']) }}" method='POST' id="delete-form" onsubmit="return confirm_delete('Are you sure you want to delete this plant? This action cannot be undone.')">
             <input type="submit" class="nav" onclick="delete_modal()" value="Delete Plant">
         </form>
 </main>
