--- a/templates/detail.html
+++ b/templates/detail.html
@@ -35,7 +35,7 @@
 
                 <label>
                     Date harvested
-                    <input type="date" name="date_planted">
+                    <input type="date" name="date">
                 </label>
 
                 <input type="submit" class="submit" value="Harvest!">
@@ -46,13 +46,13 @@
 
             <ul>
                 {% for harvest in plant['harvests'] %}
-                    <li>{{ harvest['date'] }}: Harvested {{ harvest['quantity'] }}</li>
+                    <li>{{ harvest['date'] }}: Harvested {{ harvest['harvest_amount'] }}</li>
                 {% endfor %}
             </ul>
         </section>
 
         <form action="{{ url_for('delete', plant_id=plant['_id']) }}" method='POST' id="delete-form" onsubmit="return confirm_delete('Are you sure you want to delete this plant? This action cannot be undone.')">
-            <input type="submit" class="nav" onclick="delete_modal()" value="Delete Plant">
+            <input type="submit" class="nav" value="Delete Plant">
         </form>
 </main>
 
