--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,63 +1,58 @@
 {% extends 'base.html' %}
 {% block content %}
 
-
-
 <main>
-        <h1>{{ plant['name'] }}</h1>
+    <h1>{{ plant.name }}</h1>
 
-        <img src="{{ plant['photo_url'] | default('default_image.jpg') }}" alt="Photo of {{ plant['name'] }}">
+    <img src="{{ plant.photo_url }}" alt="Image of {{ plant.name }}">
 
-        
+    <section id="info">
+        <h3>Info</h3>
 
-        <section id="info">
-            <h3>Info</h3>
+        <strong>Date Planted:</strong>
+        {{ plant.date_planted }}
+        <br><br>
 
-            <strong>Date Planted:</strong>
-            {{ plant['date_planted'] }}
-            <br><br>
+        <strong>Variety:</strong>
+        {{ plant.variety }}
+        <br><br>
 
-            <strong>Variety:</strong>
-            {{ plant['variety'] }}
-            <br><br>
+        <a class="nav" href="/edit/{{ plant._id }}">Edit Plant</a><br><br>
+    </section>
 
-            <a class="nav" href="{{ url_for('edit', plant_id=plant['_id']) }}">Edit Plant</a><br><br>
-        </section>
+    <form action="/harvest/{{ plant._id }}" method="POST">
+        <fieldset>
+            <legend>Harvested:</legend>
+            
+            <label>
+                Amount harvested
+                <input type="text" name="quantity" placeholder="e.g. 2 tomatoes">
+            </label>
 
-        <form action="{{ url_for('harvest', plant_id=plant['_id']) }}" method="POST">
-            <fieldset>
-                <legend>Harvested:</legend>
-                
-                <label>
-                    Amount harvested
-                    <input type="text" name="quantity" placeholder="e.g. 2 tomatoes" required>
-                </label>
+            <label>
+                Date harvested
+                <input type="date" name="date">
+            </label>
 
-                <label>
-                    Date harvested
-                    <input type="date" name="date" required>
-                </label>
+            <input type="submit" class="submit" value="Harvest!">
+        </fieldset>
+    </form>
 
-                <input type="submit" class="submit" value="Harvest!">
-            </fieldset>
-        </form>
-        <section id="harvest-history">
-            <h3>Harvest History</h3>
+    <section id="harvest-history">
+        <h3>Harvest History</h3>
 
-            <ul>
-                {% if harvests %}
-                {% for harvest in harvests %}
-                    <li>{{ harvest['date'] }}: Harvested {{ harvest['quantity'] }}</li>
-                {% endfor %}
-                {% else %}
-                    <li>No harvest history available.</li>
-                {% endif %}
-            </ul>
-        </section>
+        <ul>
+            {% for harvest in harvests %}
+                <li>{{ harvest.date }}: Harvested {{ harvest.quantity }}</li>
+            {% else %}
+                <li>No harvest history available.</li>
+            {% endfor %}
+        </ul>
+    </section>
 
-        <form action="{{ url_for('delete', plant_id=plant['_id']) }}" method='POST' id="delete-form" onsubmit="return confirm('Are you sure you want to delete this plant? This action cannot be undone.')">
-            <input type="submit" class="nav" value="Delete Plant">
-        </form>
+    <form action="/delete/{{ plant._id }}" method="POST" id="delete-form" onsubmit="return confirm('Are you sure you want to delete this plant?');">
+        <input type="submit" class="nav" value="Delete Plant">
+    </form>
 </main>
 
 {% endblock content %}
