--- a/templates/create.html
+++ b/templates/create.html
@@ -11,7 +11,7 @@
 
             <label>
                 Plant's name:
-                <input type="text" name="plant_name">
+                <input type="text" name="name">
             </label>
             
             <label>
@@ -21,7 +21,7 @@
 
             <label>
                 Plant's photo URL:
-                <input type="url" name="photo">
+                <input type="url" name="photo_url">
             </label>
 
             <label>
