--- a/static/style.css
+++ b/static/style.css
@@ -164,6 +164,15 @@ form#delete-form {
     align-items: center;
 }
 
+/* Plant detail page specific styles */
+#detail-page img {
+    max-width: 100%;
+    max-height: 400px;
+    object-fit: contain;
+    display: block;
+    margin: 20px auto;
+}
+
 div.info {
     margin-top: 30px;
 }
